feat(ui): add mobile header and footer on landing page
Implemented a responsive header and footer for the landing page, ensuring better navigation and usability on mobile devices. Adjusted layout and styling for optimal mobile experience.

--- a/src/input.css
+++ b/src/input.css
@@ -1,1 +1,8 @@
 @import "tailwindcss";
+
+@font-face {
+    font-family:'harabara';
+    src: url('../assets/fonts/harabara.otf');
+    font-weight: normal;
+    font-size: normal;
+}
