feat(ui): added responsiveness to desktop and laptop

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,3 @@
-* {
-    /* outline: 1px solid red; */
-}
-
 html,
 body {
     overflow-x: hidden;
@@ -12,3 +8,72 @@ body {
     border-radius: var(--radius-xl);
     box-shadow: 3px 3px 0px 0px black;
 }
+
+* {
+    /* outline: 1px solid green */
+}
+
+.header-div-pc-laptop {
+    display: none;
+}
+
+.header-div-phone-tablet{
+    display: flex;
+}
+.welcome-lang {
+    display: none;
+}
+
+.icons-size {
+    font-size: var(--text-xl);
+}
+
+.main-desk-lap {
+    display: none;
+}
+
+
+
+/* Show main when screen reaches sm (640px) */
+@media (min-width: 640px) {
+    .header-div-pc-laptop,
+    .main-desk-lap {
+        display: none;
+    }
+    .header-div-phone-tablet {
+        display: flex;
+    }
+}
+
+@media (min-width: 768px) { /* md */
+    .header-div-pc-laptop,
+    .main-desk-lap {
+        display: none;
+    }
+    .header-div-phone-tablet {
+        display: flex;
+    }
+}
+
+@media (min-width: 1024px) { /* lg */
+    .header-div-pc-laptop,
+    .main-desk-lap {
+        display: flex;
+    }
+    .header-div-phone-tablet {
+        display: none;
+    }
+}
+
+@media (min-width: 1280px) { /* xl */
+    .header-div-pc-laptop,
+    .main-desk-lap {
+        display: flex;
+    }
+    .header-div-phone-tablet {
+        display: none;
+    }
+}
+
+
+
