feat(ui): added new landing page for tablet/mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,21 +1,17 @@
+@import url(../../src/output.css);
+@import url(../../src/input.css);
+
 html,
 body {
     overflow-x: hidden;
     max-width: 100vw;
 
 }
-.box-shadow-right {
-    border-radius: var(--radius-xl);
-    box-shadow: 3px 3px 0px 0px black;
-}
 
-* {
-    /* outline: 1px solid green */
-}
+/* * {
+    outline: 1px solid green
+} */
 
-.header-div-pc-laptop {
-    display: none;
-}
 
 .header-div-phone-tablet{
     display: flex;
@@ -29,51 +25,105 @@ body {
 }
 
 .main-desk-lap {
-    display: none;
+    display: flex;
 }
+.footer-desk-lap{
+    display: flex;
+}
+
+.interactive-p {
+    border-radius: var(--radius-xl);
+    box-shadow: -5px 5px 0px 0px var(--color-primary);
+    color: var(--color-primary);
+}
+
+.gamified-p {
+    border-radius: var(--radius-xl);
+    box-shadow: 5px 5px 0px 0px var(--color-primary);
+    color: var(--color-primary);
+}
+.ai-p{
+    border-radius: var(--radius-xl);
+    box-shadow: -5px 5px 0px 0px var(--color-primary);
+    color: var(--color-primary);
+}
+
+.anytime-p {
+    border-radius: var(--radius-xl);
+    box-shadow: 5px 5px 0px 0px var(--color-primary);
+    color: var(--color-primary);
+}
+
 
 
 
 /* Show main when screen reaches sm (640px) */
 @media (min-width: 640px) {
-    .header-div-pc-laptop,
-    .main-desk-lap {
-        display: none;
-    }
-    .header-div-phone-tablet {
-        display: flex;
-    }
+
 }
 
 @media (min-width: 768px) { /* md */
-    .header-div-pc-laptop,
-    .main-desk-lap {
-        display: none;
+    .interactive-p {
+        border-radius: var(--radius-xl);
+        box-shadow: -5px 5px 0px 0px var(--color-primary);
     }
-    .header-div-phone-tablet {
-        display: flex;
+
+    .gamified-p {
+        border-radius: var(--radius-xl);
+        box-shadow: -5px 5px 0px 0px var(--color-primary);
     }
+    .ai-p{
+        border-radius: var(--radius-xl);
+        box-shadow: 5px 5px 0px 0px var(--color-primary);
+    }
+
+    .anytime-p {
+        border-radius: var(--radius-xl);
+        box-shadow: 5px 5px 0px 0px var(--color-primary);
+    }
+
 }
 
 @media (min-width: 1024px) { /* lg */
-    .header-div-pc-laptop,
-    .main-desk-lap {
-        display: flex;
+    .interactive-p {
+        border-radius: var(--radius-xl);
+        box-shadow: -5px 5px 0px 0px var(--color-primary);
     }
-    .header-div-phone-tablet {
-        display: none;
+
+    .gamified-p {
+        border-radius: var(--radius-xl);
+        box-shadow: -5px 5px 0px 0px var(--color-primary);
+    }
+    .ai-p{
+        border-radius: var(--radius-xl);
+        box-shadow: 5px 5px 0px 0px var(--color-primary);
+    }
+
+    .anytime-p {
+        border-radius: var(--radius-xl);
+        box-shadow: 5px 5px 0px 0px var(--color-primary);
     }
 }
 
 @media (min-width: 1280px) { /* xl */
-    .header-div-pc-laptop,
-    .main-desk-lap {
-        display: flex;
+
+    .interactive-p {
+        border-radius: var(--radius-xl);
+        box-shadow: -5px 5px 0px 0px var(--color-primary);
     }
-    .header-div-phone-tablet {
-        display: none;
+
+    .gamified-p {
+        border-radius: var(--radius-xl);
+        box-shadow: -5px 5px 0px 0px var(--color-primary);
     }
+    .ai-p{
+        border-radius: var(--radius-xl);
+        box-shadow: 5px 5px 0px 0px var(--color-primary);
+    }
+
+    .anytime-p {
+        border-radius: var(--radius-xl);
+        box-shadow: 5px 5px 0px 0px var(--color-primary);
+    }
+
 }
-
-
-
